# macro-observatory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pages.yml  scheduled-refresh.yml
docs/design/: 00-intro.md  01-fed-net-liquidity-milestone.md  02-data-layer-and-cache.md  03-static-site-interfaces.md  04-tga-explorer-milestone.md  05-github-pages-deployment.md  06-github-actions-cache-persistence.md  07-scheduled-refresh-policy.md  08-treasury-securities-net-issuance-milestone.md  09-signal-engine.md  90-future-deployment-options.md  91-browser-data-formats.md  92-feature-module-architecture.md
docs/handbook/: commands.md  current-state.md
site/: index.html
site/assets/css/: site.css
site/assets/js/: fed-net-liquidity.js  site.js  tga-explorer.js  treasury-securities-net-issuance.js
site/pages/fed-net-liquidity/: index.html
site/pages/tga-explorer/: index.html
site/pages/treasury-securities-net-issuance/: index.html
src/macro_observatory/: __init__.py  __main__.py  cache.py  cli.py  data.py  derived.py  diagnostics.py  models.py  publish.py  registry.py  server.py  site_build.py  validation.py
src/macro_observatory/sources/: fred.py  nyfed.py  treasury.py
tests/: test_cache.py  test_derived.py  test_diagnostics.py  test_nyfed.py  test_publish.py  test_registry.py  test_server.py  test_site_build.py  test_treasury.py
