[project]
name = "macro-observatory"
version = "0.1.0"
description = "Static macroeconomic data pipeline and presentation experiments"
readme = "README.md"
authors = [
    { name = "dharmatech", email = "wayo.cavazos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]

[project.scripts]
macro-observatory = "macro_observatory:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-requests>=2.33.0.20260518",
]
[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
